corpus/c/type/case-12/snapshots/gcc15/render.ci.txt
src/main.c:7:17: error: type or overload mismatch
help: compare the expected type and actual argument at the call site
why: incompatible types when initializing type 'int' using type 'struct Box'
| src/main.c:7:17
|     int value = box;
|                 ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output